--- a/tmgmt.local_actions.yml
+++ b/tmgmt.local_actions.yml
@@ -1,5 +1,5 @@
-tmgmt_ui_translator_add:
-  route_name: tmgmt_translator_add
+tmgmt.translator_add:
+  route_name: tmgmt.translator_add
   title: 'Add translator'
   appears_on:
     - tmgmt_translator_list
