--- a/tmgmt.routing.yml
+++ b/tmgmt.routing.yml
@@ -1,39 +1,39 @@
-tmgmt_settings:
+tmgmt.settings:
   path: '/admin/config/regional/tmgmt_settings'
   defaults:
     _form: 'Drupal\tmgmt\Form\SettingsForm'
   requirements:
     _permission: 'administer tmgmt'
 
-tmgmt_translator_list:
+tmgmt.translator_list:
   path: '/admin/config/regional/tmgmt_translator'
   defaults:
     _entity_list: 'tmgmt_translator'
   requirements:
     _permission: 'administer tmgmt'
 
-tmgmt_translator_add:
+tmgmt.translator_add:
   path: '/admin/config/regional/tmgmt_translator/add'
   defaults:
     _entity_form: tmgmt_translator.add
   requirements:
     _entity_create_access: tmgmt_translator
 
-tmmgt_translator_entity:
+tmmgt.translator_entity:
   path: '/admin/config/regional/tmgmt_translator/manage/{tmgmt_translator}'
   defaults:
     _entity_form: tmgmt_translator.edit
   requirements:
     _entity_access: tmgmt_translator.update
 
-tmmgt_job_entity:
+tmmgt.job_entity:
   path: '/admin/tmgmt/jobs/{tmgmt_job}'
   defaults:
     _entity_form: tmgmt_job.edit
   requirements:
     _entity_access: tmgmt_job.update
 
-tmmgt_job_item_entity:
+tmmgt.job_item_entity:
   path: '/admin/tmgmt/items/{tmgmt_job_item}'
   defaults:
     _entity_form: tmgmt_job_item.edit
